# PurpleCrayon

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
docs/: API_OVERVIEW.md  AUGMENT_API.md  CATALOG_API.md  CLONE_API.md  EXAMPLES_INDEX.md  FETCH_API.md  GENERATE_API.md  SCRAPE_API.md  SOURCE_API.md  TESTING.md  TEST_EXECUTION_COMPARISON.md
examples/: __init__.py  api_example.py  augment_example.py  catalog_example.py  check_api_keys.py  clone_demo.py  clone_example.py  fetch_example.py  generate_example.py  integration_test.py  scrape_comparison.py  scrape_example.py  simple_clone_assetrequest_example.py  simple_clone_example.py  source_example.py  test_image_to_image.py  unified_model_example.py
gui_static/css/: style.css
gui_static/js/: app.js
gui_templates/: 404.html  500.html  index.html
purplecrayon/: __init__.py  core.py  decorators.py  utils.py
purplecrayon/agent/: graph.py  graph_runtime.py  state.py
purplecrayon/config/: models.json
purplecrayon/core/: __init__.py  converters.py  parsers.py  runner.py  types.py
purplecrayon/models/: __init__.py  agent_state.py  asset_request.py  generation_models.py  image_result.py
purplecrayon/services/: __init__.py  image_service.py
purplecrayon/tools/: __init__.py  ai_generation_tools.py  asset_curation_tools.py  asset_management_tools.py  catalog_tools.py  clone_image_tools.py  file_tools.py  image_augmentation_tools.py  image_processing_tools.py  image_renaming_tools.py  image_validation_tools.py  scraping_tools.py  search_tools.py  search_tools_playwright.py  simple_clone_tools.py  smart_selection_tools.py  stock_photo_tools.py
purplecrayon/utils/: README.md  __init__.py  cleanup_corrupted_images.py  config.py  file_utils.py  update_catalog.py
scripts/: add_unit_markers.py  fix_all_indentation.py  fix_all_indentation_comprehensive.py  fix_all_markers.py  fix_all_tests.py  fix_indentation.py  fix_indentation_final.py  fix_test_structure.py  fix_tests.py  run_stable_tests.py  run_tests_fail_fast.py  run_working_tests.py  run_working_tests_updated.py
tests/: README_API_TESTING.md  __init__.py  conftest.py  test_ai_generation_api.py  test_asset_catalog.py  test_augmentation_api.py  test_cli.py  test_clone_api.py  test_core.py  test_image_service.py  test_integration_api.py  test_integration_workflow.py  test_models.py  test_runner.py  test_scraping_api.py  test_stock_photos_api.py  test_tools_smart_selection.py  test_utils_config.py  test_utils_file_utils.py
