[project]
name = "purplecrayon"
version = "0.1.3"
description = "AI graphics sourcing and generation toolkit with image cloning for royalty-free alternatives"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "firecrawl-py",
    "google-generativeai",
    "httpx",
    "imagehash",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "lxml",
    "openai",
    "pillow",
    "playwright",
    "pytest",
    "pytest-asyncio",
    "pydantic>=2",
    "python-dotenv",
    "pyyaml",
    "replicate",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["purplecrayon*"]
exclude = ["tests*", "examples*", "assets*", "downloads*", "processed*", "originals*"]

