[project]
name = "purplecrayon"
version = "0.1.5"
description = "AI graphics sourcing and generation toolkit with image cloning for royalty-free alternatives"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "firecrawl-py",
    "google-generativeai",
    "httpx",
    "imagehash",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "lxml",
    "openai",
    "pillow",
    "playwright",
    "pytest",
    "pytest-asyncio",
    "pydantic>=2",
    "python-dotenv",
    "pyyaml",
    "replicate",
    "google-genai>=1.46.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["purplecrayon*"]
exclude = ["tests*", "examples*", "assets*", "downloads*", "processed*", "originals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Basic unit tests that should run first",
    "integration: Integration tests requiring API keys",
    "stress: Comprehensive tests for major releases",
    "slow: Slow running tests",
    "api_gemini: Tests requiring Gemini API key",
    "api_replicate: Tests requiring Replicate API key",
    "api_unsplash: Tests requiring Unsplash API key",
    "api_pexels: Tests requiring Pexels API key",
    "api_pixabay: Tests requiring Pixabay API key",
    "api_firecrawl: Tests requiring Firecrawl API key",
    "depends_on_unit: Integration tests that depend on unit tests passing",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--maxfail=1",  # Stop on first failure
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

